--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="https://www.our-cv.xyz/">Home</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="https://thorton.our-cv.xyz/">Main CV</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="https://wages.thorton.our-cv.xyz/">Auto Wages</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#autowages">Auto Wages</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -102,7 +102,9 @@
     </div>
   </div>
 </div>
-<center><iframe width="596" height="604" frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&Item='Sheet1'!A1%3AD28&wdHideGridlines=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false"></iframe></center>
+<div class="section" id="autowages">
+  <center><iframe width="596" height="604" frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&Item='Sheet1'!A1%3AD28&wdHideGridlines=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false"></iframe></center>
+</div>
 <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
     <div class="container">
