--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
 </div>
 <div class="section" id="autowages">
-  <center><iframe frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&Item='Sheet1'!A1%3AD28&wdHideGridlines=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false" style="width:auto;height:564"></iframe></center>
+  <center><iframe frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&Item='Sheet1'!A1%3AD28&wdHideGridlines=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false" style="width:auto;height:auto"></iframe></center>
 </div>
 <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
