--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
     </div>
   </div>
 </div>
-<div class="section" id="autowages" width="auto" height="auto">
-  <center><iframe width="596" height="337" frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&Item='Sheet1'!A1%3AD15&wdHideGridlines=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false"></iframe></center>
+<div class="section" id="autowages">
+  <center><iframe width="1850" height="550" frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&Item='Sheet1'!A30%3AO54&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false"></iframe></center>
 </div>
 <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
