--- a/index.html
+++ b/index.html
@@ -108,14 +108,26 @@
       <div class="row">
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-			  <center><iframe width="1850" height="550" frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&AllowTyping=True&Item='Sheet1'!A30%3AO54&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false"></iframe></center>
-			</div>
+	    <center><iframe width="950" height="550" frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&Item='Sheet1'!A30%3AG54&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false"></iframe></center>
+	  </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
+<div class="section" id="autowages2">
+  <div class="container">
+    <div class="card" data-aos="fade-up" data-aos-offset="10">
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+          <div class="card-body">
+	    <center><iframe width="950" height="550" frameborder="0" scrolling="no" src="https://ovationnzltd-my.sharepoint.com/personal/tellmers_ovation_co_nz/_layouts/15/Doc.aspx?sourcedoc={0c0ae099-26e1-4486-bd7e-2a05ab353595}&action=embedview&wdAllowInteractivity=False&Item='Sheet1'!I30%3AO54&wdInConfigurator=True&wdInConfigurator=True&edesNext=false&resen=true&ed1JS=false"></iframe></center>
+	  </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="section" id="contact">
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
     <div class="container">
